# rust-cli-quickstart

./: Cargo.toml  Justfile  README.md  customize.ts
benches/: benchmarks.rs
src/: lib.rs
